force-app/main/default/objects/SVMXC__Page_Layout_Detail__c/SVMXC__Page_Layout_Detail__c.object-meta.xml
<CustomObject>
    <description>This object is to store details of a page layout ex: Sections, Buttons, Fields etc</description>
    <label>Page Layout Detail</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Layout Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>