force-app/main/default/objects/SVMXC__Page_Layout_Detail__c/fields/SVMXC__Enable_Chatter__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Enable_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Based on this flag, chatter icon will be enabled for this lookup field in iPad client</description>
    <inlineHelpText>Based on this flag, chatter icon will be enabled for this lookup field in iPad client</inlineHelpText>
    <label>Enable Chatter</label>
    <type>Checkbox</type>
</CustomField>