force-app/main/default/objects/SVMXC__Page_Layout_Detail__c/fields/SVMXC__Installation_Key__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Installation_Key__c</fullName>
    <description>Installation key used when seeding default page layout details</description>
    <inlineHelpText>Installation key used when seeding default page layout details</inlineHelpText>
    <label>Installation Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>