force-app/main/default/objects/SVMXC__Page_Layout_Detail__c/fields/SVMXC__Lookup_Context__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Lookup_Context__c</fullName>
    <description>Field Name of Lookup Context</description>
    <inlineHelpText>Field Name of Lookup Context</inlineHelpText>
    <label>Lookup Context</label>
    <length>150</length>
    <type>Text</type>
</CustomField>