force-app/main/default/objects/SVMXC__Page_Layout_Detail__c/fields/SVMXC__No_Of_Columns__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__No_Of_Columns__c</fullName>
    <description>Number of columns for the section. Applies to header sections only.</description>
    <inlineHelpText>Number of columns for the section. Applies to header sections only.</inlineHelpText>
    <label>No Of Columns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>