force-app/main/default/objects/SVMXC__Page_Layout_Detail__c/fields/SVMXC__Readonly__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Readonly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Readonly</description>
    <inlineHelpText>Readonly</inlineHelpText>
    <label>Readonly</label>
    <type>Checkbox</type>
</CustomField>