force-app/main/default/objects/SVMXC__Page_Layout_Detail__c/fields/SVMXC__Related_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Related_Object_Name__c</fullName>
    <description>Related Object Name</description>
    <label>Related Object Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>