force-app/main/default/objects/SVMXC__Page_Layout_Detail__c/fields/SVMXC__Show_In_iPad__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Show_In_iPad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show In iPad</label>
    <type>Checkbox</type>
</CustomField>