force-app/main/default/objects/SVMXC__Page_Layout_Detail__c/fields/SVMXC__SM_Help_URL__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Help_URL__c</fullName>
    <label>Help URL</label>
    <type>Url</type>
</CustomField>