force-app/main/default/objects/SVMXC__Page_Layout_Detail__c/fields/SVMXC__Width__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Width__c</fullName>
    <label>Width</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>